--- a/forum/templates/forum/profile.html
+++ b/forum/templates/forum/profile.html
@@ -65,7 +65,7 @@
 
     <script>
         function openPage(pageName,elmnt) {
-            var i, tabcontent, tablinks;
+            let i, tabcontent, tablinks;
             tabcontent = document.getElementsByClassName("tabContent");
             for (i = 0; i < tabcontent.length; i++) {
                 tabcontent[i].style.display = "none";
