--- a/forum/templates/forum/topic_details.html
+++ b/forum/templates/forum/topic_details.html
@@ -29,7 +29,7 @@
             {% include 'forum/widgets/paginator.html' %}
         {% else %}
             <article>
-                <p>Não há posts</p>
+                <p>There are no posts, be the first to add one!</p>
             </article>
         {% endif %}
         </section>
@@ -55,6 +55,7 @@
                 {% endfor %}
                 <input type="submit" class="createpostbutton" value="Post">
                 <input type="hidden" id="createPost-topicId" value="{{ topic.id }}">
+                <div class="createPost-error"></div>
             </form>
         </div>
     </div>
