--- a/forum/templates/forum/post_details.html
+++ b/forum/templates/forum/post_details.html
@@ -18,12 +18,14 @@
                 <div class="textpost">
                     <p class="postTitle">{{ post.title }}</p>
                     {% if post.text %}
-                        <p class="postText">{{ post.text }}</p>
+                        <p class="postText">{{ post.text|linebreaks }}</p>
                     {% endif %}
                     <div class="postmedia">
                         {% if post.image %}
                             <img src="{{ post.image }}">
                         {% endif %}
+                    </div>
+                    <div class="postmedia">
                         {% if post.video %}
                             <iframe src="{{ post.video }}">
                             </iframe>
